# rgb-system

./: .gitignore  README.md  docker-compose.yaml  install.sh
cd/docker/api/: Dockerfile
cd/docker/front/: Dockerfile
cd/docker/monitoring/grafana/: grafana.ini
cd/docker/monitoring/grafana/dashboards/applications/: API.json
cd/docker/monitoring/grafana/dashboards/default/: grafana.json  prometheus.json  prometheus2.json
cd/docker/monitoring/grafana/provisioning/dashboards/: dashboards.yaml
cd/docker/monitoring/prometheus/: prometheus.yml
cd/docker/redpanda/: config.yaml
cd/kubernetes/: 0-namespace.yaml  README.md  install.sh  kustomization.yaml
front/: package.json
front/src/: App.vue
front/src/components/: EventItem.vue
services/api/: .dockerignore  logger.yml  pyproject.toml
services/api/app/: dependencies.py  main.py  settings.py
services/api/app/models/: events.py
services/api/app/services/: kafka.py  rgbEventProducer.py  schema_registry.py
services/api/envs/: docker.env  local.dev.env
services/api/resources/: schemas.json
services/api/resources/avro/: rgbEventKey.avsc  rgbEventValue.avsc  rgb_event_key.avsc  rgb_event_value.avsc
services/api/scripts/: update_schemas.py
services/front/: index.html  package-lock.json  package.json
services/front/src/: App.vue  main.js
services/front/src/components/: AppMain.vue  EventItem.vue  Toast.js  Toast.vue
services/front/src/components/icons/: Icon.vue  IconBlue.vue  IconGreen.vue  IconRed.vue
services/front/src/components/toast/: Toast.js  Toast.vue  ToastManager.vue
(+1 files in other folders)
