[tool.poetry]
name = "rgb-system-api"
version = "0.1.0"
description = ""
authors = ["fabienlamonarca <fabien.lamonarca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
kafka-python = "^2.0.2"
requests = "^2.28.1"
confluent-kafka = "^1.9.2"
avro = "^1.11.1"
prometheus-client = "^0.16.0"
prometheus-fastapi-instrumentator = "^5.9.1"


[tool.poetry.group.dev.dependencies]
watchfiles = "^0.18.0"
requests = "^2.28.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
